# geminipocket

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build_deploy.sh  openapi-spec.json  redocly.yaml
.github/workflows/: ci.yml
backend/: build.sh  setup_db.sh  wrangler.toml
backend/worker/: Cargo.toml  build.sh  wrangler.toml
backend/worker/migrations/: 001_create_users.sql
backend/worker/src/: lib.rs  openapi.rs  swagger_ui.rs  test.rs
cli/: Cargo.toml
cli/src/: api.rs  config.rs  lib.rs  main.rs  types.rs  utils.rs
cli/src/commands/: auth.rs  config.rs  edit.rs  edit_video.rs  generate.rs  generate_video.rs  health.rs  info.rs  mod.rs
web/: .gitignore  README.md  package.json
web/public/: app.js  index.html  styles.css
