[package]
name = "geminipocket-worker"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
worker = "0.6.0"
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"