[package]
name = "geminipocket-worker"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
worker = { version = "0.6.1", features = ["d1"] }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
js-sys = "0.3"
console_error_panic_hook = "0.1"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"